# ferran-jovell-orbidi-technical-task

./: Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: ci.yaml
orbidi/: asgi.py  docs.py  settings.py  urls.py  wsgi.py
orbidi/auth/: apps.py  urls.py
orbidi/business/: admin.py  aggregates.py  apps.py  distance.py  metrics.py  models.py  serializers.py  urls.py  views.py
orbidi/business/migrations/: 0001_initial.py
orbidi/health/: apps.py  urls.py  views.py
orbidi/settings/: base.py  production.py  testing.py
tests/: conftest.py  test_auth.py  test_business_endpoint.py  test_competitors_endpoint.py  test_health.py  test_iae_endpoint.py  test_metrics.py  test_missing_migrations.py
